[package]
name = "flowsentinel"
version = "1.0.0"
edition = "2021"
authors = ["Disc0nect <montassarsilinigamer@gmail.com>"]
description = "A beautiful, interactive Linux TUI network traffic monitor per application/process"
license = "MIT"
readme = "README.md"
keywords = ["network", "monitoring", "tui", "linux", "traffic"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "flowsentinel"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.31"
procfs = "0.16"

# Netlink
netlink-packet-core = "0.7"
netlink-packet-sock-diag = "0.4"
netlink-sys = "0.8"

# Packet Capture & DNS
pnet = "0.34"
dns-parser = "0.8"
httparse = "1.8"
tls-parser = "0.11"
pcap-file = "1.1"
whois-rust = "1.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Misc
once_cell = "1"
parking_lot = "0.12"
libc = "0.2"
maxminddb = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }

[package.metadata.deb]
maintainer = "Disc0nect <montassarsilinigamer@gmail.com>"
copyright = "2026, Disc0nect"
license-file = ["LICENSE", "0"]
depends = "libpcap0.8, libsqlite3-0"
section = "net"
priority = "optional"
assets = [
    ["target/release/flowsentinel", "usr/bin/flowsentinel", "755"],
    ["README.md", "usr/share/doc/flowsentinel/README.md", "644"],
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
